2004-10-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/config/installed.py.in:
	* flumotion/config/uninstalled.py.in:
	  add version number

2004-10-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/registry.py (ComponentRegistry.getFileList):
	Make it recursive

	* flumotion/test/test_registry.py (TestFindComponents): and add
	some tests

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/Makefile.am:
	* flumotion/manager/manager.py:
	* flumotion/twisted/cred.py:
	* flumotion/twisted/portal.py:
	* flumotion/worker/main.py:
	* flumotion/worker/worker.py:
	  remove confusion, add comments

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/Makefile.am:
	* flumotion/component/base/converter.py:
	* flumotion/component/base/producer.py:
	* flumotion/component/component.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/file/file.py:
	* flumotion/component/http/http.py:
	* flumotion/test/test_component.py:
	  separate out feedcomponent to a separate file

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* flumotion/admin/admin.py:
	* flumotion/common/interfaces.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/manager.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  rename interfaces for the views that handle remote calls from
	  manager
	  split out FeedComponent from BaseComponent in preparation for
	  other types of component

2004-10-05  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard.glade:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_enum.py:
	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:

	More enum work.

2004-10-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/common/launcher.py: